# scpForward

./: .gitignore  CMakeLists.txt  bswearingen@devxnat.rcc.mcw.edu  changelog.txt  config.cfg  dstorscp2.cpp  dstorscp2.h  loadConfig.cpp  loadConfig.h  loadProcessingConfig.cpp  loadProcessingConfig.h  mapFwd.cpp  mapping.cpp  mapping.hpp  mappingCustom.cpp  mappingStructures.cpp  md5.h  readme.txt  scpForward.cpp  storescp.cfg  watchDirs.cpp  watchDirs.hpp
ConfigExamples/: basic.cfg  basic_w_modif_dates.cfg  basic_w_retain_dates.cfg  config.cfg  myname.cfg  mynameNEW.cfg
Runtime/: config.cfg
dcmtk/include/dcmtk/config/: osconfig.h
dcmtk/lib/: libcharls.13.dylib  libcharls.3.6.3.dylib  libcharls.dylib  libcmr.13.dylib  libcmr.3.6.3.dylib  libcmr.dylib  libdcmdata.13.dylib  libdcmdata.3.6.3.dylib  libdcmdata.dylib  libdcmdsig.13.dylib  libdcmdsig.3.6.3.dylib  libdcmdsig.dylib  libdcmfg.13.dylib  libdcmfg.3.6.3.dylib  libdcmfg.dylib  libdcmimage.13.dylib  libdcmimage.3.6.3.dylib  libdcmimage.dylib  libdcmimgle.13.dylib  libdcmimgle.3.6.3.dylib  libdcmimgle.dylib  libdcmiod.13.dylib  libdcmiod.3.6.3.dylib  libdcmiod.dylib  libdcmjpeg.13.dylib  libdcmjpeg.3.6.3.dylib  libdcmjpeg.dylib  libdcmjpls.13.dylib  libdcmjpls.3.6.3.dylib  libdcmjpls.dylib  libdcmnet.13.dylib  libdcmnet.3.6.3.dylib  libdcmnet.dylib  libdcmpmap.13.dylib  libdcmpmap.3.6.3.dylib  libdcmpmap.dylib  libdcmpstat.13.dylib  libdcmpstat.3.6.3.dylib  libdcmpstat.dylib  libdcmqrdb.13.dylib  (+37 more)
dcmtk/lib/cmake/dcmtk/: DCMTKConfig.cmake  DCMTKTargets-release.cmake  DCMTKTargets.cmake
